y.output
Nonterminals useless in grammar

    E
    T
    F
    G
    I
    J
    K
    L


Terminals unused in grammar

    TK_PR_INPUT
    TK_PR_OUTPUT
    TK_PR_FOR
    TK_OC_LE
    TK_OC_GE
    TK_OC_NE
    TK_OC_AND
    TK_OC_OR
    TK_ERRO
    '+'
    '-'
    '*'
    '/'
    '%'
    '!'


Rules useless in grammar

   61 Expr: E

   62 E: E TK_OC_OR T
   63  | T

   64 T: T TK_OC_AND F
   65  | F

   66 F: F TK_OC_EQ G
   67  | F TK_OC_NE G
   68  | G

   69 G: G TK_OC_LE I
   70  | G TK_OC_GE I
   71  | I

   72 I: I '+' J
   73  | I '-' J
   74  | J

   75 J: J '*' K
   76  | J '/' K
   77  | J '%' K
   78  | K

   79 K: '-' L
   80  | '!' L

   81 L: '(' E ')'
   82  | E


State 15 conflicts: 2 shift/reduce, 1 reduce/reduce
State 30 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DecList

    2 DecList: Dec DecList
    3        | %empty

    4 Dec: Type VarList ';'
    5    | Type ID Array ';'
    6    | Type ID ';'
    7    | Type Atrib ';'
    8    | Type Func

    9 Type: TK_PR_INT
   10     | TK_PR_FLOAT
   11     | TK_PR_BOOL
   12     | TK_PR_CHAR

   13 VarList: ID ',' VarList
   14        | ID

   15 Array: %empty
   16      | '[' ArrayDim ']'

   17 ArrayDim: TK_LIT_INT ArrayDimEnd

   18 ArrayDimEnd: %empty
   19            | '^' TK_LIT_INT ArrayDimEnd

   20 Lit: TK_LIT_INT
   21    | TK_LIT_FLOAT
   22    | TK_LIT_FALSE
   23    | TK_LIT_TRUE
   24    | TK_LIT_CHAR

   25 LitList: Lit LitListEnd

   26 LitListEnd: %empty
   27           | ',' Lit LitListEnd

   28 Func: ID '(' ParamList ')' Block

   29 ParamList: %empty
   30          | Param ParamListEnd

   31 ParamListEnd: %empty
   32             | ',' Param ParamListEnd

   33 Param: Type ID

   34 Block: '{' CommandList '}'

   35 CommandList: Command CommandListEnd

   36 CommandListEnd: %empty
   37               | ';' Command CommandListEnd

   38 Command: %empty
   39        | Dec
   40        | Atrib
   41        | Flow
   42        | Ret
   43        | Block
   44        | FuncCall

   45 Atrib: ID TK_OC_EQ Expr
   46      | ID TK_OC_EQ Array
   47      | ID Array TK_OC_EQ Expr

   48 Flow: TK_PR_IF '(' Expr ')' TK_PR_THEN Command Else
   49     | TK_PR_WHILE '(' Expr ')' Block

   50 Else: %empty
   51     | TK_PR_ELSE Command

   52 Ret: TK_PR_RETURN Expr

   53 FuncCall: ID '(' ExprList ')'

   54 ID: TK_IDENTIFICADOR

   55 Expr: ID
   56     | LitList
   57     | FuncCall

   58 ExprList: Expr ExprListEnd

   59 ExprListEnd: %empty
   60            | ',' Expr ExprListEnd


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '%' (37)
    '(' (40) 28 48 49 53
    ')' (41) 28 48 49 53
    '*' (42)
    '+' (43)
    ',' (44) 13 27 32 60
    '-' (45)
    '/' (47)
    ';' (59) 4 5 6 7 37
    '[' (91) 16
    ']' (93) 16
    '^' (94) 19
    '{' (123) 34
    '}' (125) 34
    error (256)
    TK_PR_INT (258) 9
    TK_PR_FLOAT (259) 10
    TK_PR_BOOL (260) 11
    TK_PR_CHAR (261) 12
    TK_PR_IF (262) 48
    TK_PR_THEN (263) 48
    TK_PR_ELSE (264) 51
    TK_PR_WHILE (265) 49
    TK_PR_INPUT (266)
    TK_PR_OUTPUT (267)
    TK_PR_RETURN (268) 52
    TK_PR_FOR (269)
    TK_OC_LE (270)
    TK_OC_GE (271)
    TK_OC_EQ (272) 45 46 47
    TK_OC_NE (273)
    TK_OC_AND (274)
    TK_OC_OR (275)
    TK_LIT_INT (276) 17 19 20
    TK_LIT_FLOAT (277) 21
    TK_LIT_FALSE (278) 22
    TK_LIT_TRUE (279) 23
    TK_LIT_CHAR (280) 24
    TK_IDENTIFICADOR (281) 54
    TK_ERRO (282)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    Program (44)
        on left: 1
        on right: 0
    DecList (45)
        on left: 2 3
        on right: 1 2
    Dec (46)
        on left: 4 5 6 7 8
        on right: 2 39
    Type (47)
        on left: 9 10 11 12
        on right: 4 5 6 7 8 33
    VarList (48)
        on left: 13 14
        on right: 4 13
    Array (49)
        on left: 15 16
        on right: 5 46 47
    ArrayDim (50)
        on left: 17
        on right: 16
    ArrayDimEnd (51)
        on left: 18 19
        on right: 17 19
    Lit (52)
        on left: 20 21 22 23 24
        on right: 25 27
    LitList (53)
        on left: 25
        on right: 56
    LitListEnd (54)
        on left: 26 27
        on right: 25 27
    Func (55)
        on left: 28
        on right: 8
    ParamList (56)
        on left: 29 30
        on right: 28
    ParamListEnd (57)
        on left: 31 32
        on right: 30 32
    Param (58)
        on left: 33
        on right: 30 32
    Block (59)
        on left: 34
        on right: 28 43 49
    CommandList (60)
        on left: 35
        on right: 34
    CommandListEnd (61)
        on left: 36 37
        on right: 35 37
    Command (62)
        on left: 38 39 40 41 42 43 44
        on right: 35 37 48 51
    Atrib (63)
        on left: 45 46 47
        on right: 7 40
    Flow (64)
        on left: 48 49
        on right: 41
    Else (65)
        on left: 50 51
        on right: 48
    Ret (66)
        on left: 52
        on right: 42
    FuncCall (67)
        on left: 53
        on right: 44 57
    ID (68)
        on left: 54
        on right: 5 6 13 14 28 33 45 46 47 53 55
    Expr (69)
        on left: 55 56 57
        on right: 45 47 48 49 52 58 60
    ExprList (70)
        on left: 58
        on right: 53
    ExprListEnd (71)
        on left: 59 60
        on right: 58 60


State 0

    0 $accept: . Program $end

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 3 (DecList)

    Program  go to state 5
    DecList  go to state 6
    Dec      go to state 7
    Type     go to state 8


State 1

    9 Type: TK_PR_INT .

    $default  reduce using rule 9 (Type)


State 2

   10 Type: TK_PR_FLOAT .

    $default  reduce using rule 10 (Type)


State 3

   11 Type: TK_PR_BOOL .

    $default  reduce using rule 11 (Type)


State 4

   12 Type: TK_PR_CHAR .

    $default  reduce using rule 12 (Type)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 6

    1 Program: DecList .

    $default  reduce using rule 1 (Program)


State 7

    2 DecList: Dec . DecList

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 3 (DecList)

    DecList  go to state 10
    Dec      go to state 7
    Type     go to state 8


State 8

    4 Dec: Type . VarList ';'
    5    | Type . ID Array ';'
    6    | Type . ID ';'
    7    | Type . Atrib ';'
    8    | Type . Func

    TK_IDENTIFICADOR  shift, and go to state 11

    VarList  go to state 12
    Func     go to state 13
    Atrib    go to state 14
    ID       go to state 15


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 DecList: Dec DecList .

    $default  reduce using rule 2 (DecList)


State 11

   54 ID: TK_IDENTIFICADOR .

    $default  reduce using rule 54 (ID)


State 12

    4 Dec: Type VarList . ';'

    ';'  shift, and go to state 16


State 13

    8 Dec: Type Func .

    $default  reduce using rule 8 (Dec)


State 14

    7 Dec: Type Atrib . ';'

    ';'  shift, and go to state 17


State 15

    5 Dec: Type ID . Array ';'
    6    | Type ID . ';'
   13 VarList: ID . ',' VarList
   14        | ID .
   28 Func: ID . '(' ParamList ')' Block
   45 Atrib: ID . TK_OC_EQ Expr
   46      | ID . TK_OC_EQ Array
   47      | ID . Array TK_OC_EQ Expr

    TK_OC_EQ  shift, and go to state 18
    ';'       shift, and go to state 19
    ','       shift, and go to state 20
    '['       shift, and go to state 21
    '('       shift, and go to state 22

    TK_OC_EQ  [reduce using rule 15 (Array)]
    ';'       [reduce using rule 14 (VarList)]
    ';'       [reduce using rule 15 (Array)]

    Array  go to state 23


State 16

    4 Dec: Type VarList ';' .

    $default  reduce using rule 4 (Dec)


State 17

    7 Dec: Type Atrib ';' .

    $default  reduce using rule 7 (Dec)


State 18

   45 Atrib: ID TK_OC_EQ . Expr
   46      | ID TK_OC_EQ . Array

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11
    '['               shift, and go to state 21

    $default  reduce using rule 15 (Array)

    Array     go to state 29
    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 34


State 19

    6 Dec: Type ID ';' .

    $default  reduce using rule 6 (Dec)


State 20

   13 VarList: ID ',' . VarList

    TK_IDENTIFICADOR  shift, and go to state 11

    VarList  go to state 35
    ID       go to state 36


State 21

   16 Array: '[' . ArrayDim ']'

    TK_LIT_INT  shift, and go to state 37

    ArrayDim  go to state 38


State 22

   28 Func: ID '(' . ParamList ')' Block

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 29 (ParamList)

    Type       go to state 39
    ParamList  go to state 40
    Param      go to state 41


State 23

    5 Dec: Type ID Array . ';'
   47 Atrib: ID Array . TK_OC_EQ Expr

    TK_OC_EQ  shift, and go to state 42
    ';'       shift, and go to state 43


State 24

   20 Lit: TK_LIT_INT .

    $default  reduce using rule 20 (Lit)


State 25

   21 Lit: TK_LIT_FLOAT .

    $default  reduce using rule 21 (Lit)


State 26

   22 Lit: TK_LIT_FALSE .

    $default  reduce using rule 22 (Lit)


State 27

   23 Lit: TK_LIT_TRUE .

    $default  reduce using rule 23 (Lit)


State 28

   24 Lit: TK_LIT_CHAR .

    $default  reduce using rule 24 (Lit)


State 29

   46 Atrib: ID TK_OC_EQ Array .

    $default  reduce using rule 46 (Atrib)


State 30

   25 LitList: Lit . LitListEnd

    ','  shift, and go to state 44

    ','       [reduce using rule 26 (LitListEnd)]
    $default  reduce using rule 26 (LitListEnd)

    LitListEnd  go to state 45


State 31

   56 Expr: LitList .

    $default  reduce using rule 56 (Expr)


State 32

   57 Expr: FuncCall .

    $default  reduce using rule 57 (Expr)


State 33

   53 FuncCall: ID . '(' ExprList ')'
   55 Expr: ID .

    '('  shift, and go to state 46

    $default  reduce using rule 55 (Expr)


State 34

   45 Atrib: ID TK_OC_EQ Expr .

    $default  reduce using rule 45 (Atrib)


State 35

   13 VarList: ID ',' VarList .

    $default  reduce using rule 13 (VarList)


State 36

   13 VarList: ID . ',' VarList
   14        | ID .

    ','  shift, and go to state 20

    $default  reduce using rule 14 (VarList)


State 37

   17 ArrayDim: TK_LIT_INT . ArrayDimEnd

    '^'  shift, and go to state 47

    $default  reduce using rule 18 (ArrayDimEnd)

    ArrayDimEnd  go to state 48


State 38

   16 Array: '[' ArrayDim . ']'

    ']'  shift, and go to state 49


State 39

   33 Param: Type . ID

    TK_IDENTIFICADOR  shift, and go to state 11

    ID  go to state 50


State 40

   28 Func: ID '(' ParamList . ')' Block

    ')'  shift, and go to state 51


State 41

   30 ParamList: Param . ParamListEnd

    ','  shift, and go to state 52

    $default  reduce using rule 31 (ParamListEnd)

    ParamListEnd  go to state 53


State 42

   47 Atrib: ID Array TK_OC_EQ . Expr

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 54


State 43

    5 Dec: Type ID Array ';' .

    $default  reduce using rule 5 (Dec)


State 44

   27 LitListEnd: ',' . Lit LitListEnd

    TK_LIT_INT    shift, and go to state 24
    TK_LIT_FLOAT  shift, and go to state 25
    TK_LIT_FALSE  shift, and go to state 26
    TK_LIT_TRUE   shift, and go to state 27
    TK_LIT_CHAR   shift, and go to state 28

    Lit  go to state 55


State 45

   25 LitList: Lit LitListEnd .

    $default  reduce using rule 25 (LitList)


State 46

   53 FuncCall: ID '(' . ExprList ')'

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 56
    ExprList  go to state 57


State 47

   19 ArrayDimEnd: '^' . TK_LIT_INT ArrayDimEnd

    TK_LIT_INT  shift, and go to state 58


State 48

   17 ArrayDim: TK_LIT_INT ArrayDimEnd .

    $default  reduce using rule 17 (ArrayDim)


State 49

   16 Array: '[' ArrayDim ']' .

    $default  reduce using rule 16 (Array)


State 50

   33 Param: Type ID .

    $default  reduce using rule 33 (Param)


State 51

   28 Func: ID '(' ParamList ')' . Block

    '{'  shift, and go to state 59

    Block  go to state 60


State 52

   32 ParamListEnd: ',' . Param ParamListEnd

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    Type   go to state 39
    Param  go to state 61


State 53

   30 ParamList: Param ParamListEnd .

    $default  reduce using rule 30 (ParamList)


State 54

   47 Atrib: ID Array TK_OC_EQ Expr .

    $default  reduce using rule 47 (Atrib)


State 55

   27 LitListEnd: ',' Lit . LitListEnd

    ','  shift, and go to state 44

    ','       [reduce using rule 26 (LitListEnd)]
    $default  reduce using rule 26 (LitListEnd)

    LitListEnd  go to state 62


State 56

   58 ExprList: Expr . ExprListEnd

    ','  shift, and go to state 63

    $default  reduce using rule 59 (ExprListEnd)

    ExprListEnd  go to state 64


State 57

   53 FuncCall: ID '(' ExprList . ')'

    ')'  shift, and go to state 65


State 58

   19 ArrayDimEnd: '^' TK_LIT_INT . ArrayDimEnd

    '^'  shift, and go to state 47

    $default  reduce using rule 18 (ArrayDimEnd)

    ArrayDimEnd  go to state 66


State 59

   34 Block: '{' . CommandList '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 67
    TK_PR_WHILE       shift, and go to state 68
    TK_PR_RETURN      shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 11
    '{'               shift, and go to state 59

    $default  reduce using rule 38 (Command)

    Dec          go to state 70
    Type         go to state 8
    Block        go to state 71
    CommandList  go to state 72
    Command      go to state 73
    Atrib        go to state 74
    Flow         go to state 75
    Ret          go to state 76
    FuncCall     go to state 77
    ID           go to state 78


State 60

   28 Func: ID '(' ParamList ')' Block .

    $default  reduce using rule 28 (Func)


State 61

   32 ParamListEnd: ',' Param . ParamListEnd

    ','  shift, and go to state 52

    $default  reduce using rule 31 (ParamListEnd)

    ParamListEnd  go to state 79


State 62

   27 LitListEnd: ',' Lit LitListEnd .

    $default  reduce using rule 27 (LitListEnd)


State 63

   60 ExprListEnd: ',' . Expr ExprListEnd

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 80


State 64

   58 ExprList: Expr ExprListEnd .

    $default  reduce using rule 58 (ExprList)


State 65

   53 FuncCall: ID '(' ExprList ')' .

    $default  reduce using rule 53 (FuncCall)


State 66

   19 ArrayDimEnd: '^' TK_LIT_INT ArrayDimEnd .

    $default  reduce using rule 19 (ArrayDimEnd)


State 67

   48 Flow: TK_PR_IF . '(' Expr ')' TK_PR_THEN Command Else

    '('  shift, and go to state 81


State 68

   49 Flow: TK_PR_WHILE . '(' Expr ')' Block

    '('  shift, and go to state 82


State 69

   52 Ret: TK_PR_RETURN . Expr

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 83


State 70

   39 Command: Dec .

    $default  reduce using rule 39 (Command)


State 71

   43 Command: Block .

    $default  reduce using rule 43 (Command)


State 72

   34 Block: '{' CommandList . '}'

    '}'  shift, and go to state 84


State 73

   35 CommandList: Command . CommandListEnd

    ';'  shift, and go to state 85

    $default  reduce using rule 36 (CommandListEnd)

    CommandListEnd  go to state 86


State 74

   40 Command: Atrib .

    $default  reduce using rule 40 (Command)


State 75

   41 Command: Flow .

    $default  reduce using rule 41 (Command)


State 76

   42 Command: Ret .

    $default  reduce using rule 42 (Command)


State 77

   44 Command: FuncCall .

    $default  reduce using rule 44 (Command)


State 78

   45 Atrib: ID . TK_OC_EQ Expr
   46      | ID . TK_OC_EQ Array
   47      | ID . Array TK_OC_EQ Expr
   53 FuncCall: ID . '(' ExprList ')'

    TK_OC_EQ  shift, and go to state 18
    '['       shift, and go to state 21
    '('       shift, and go to state 46

    TK_OC_EQ  [reduce using rule 15 (Array)]

    Array  go to state 87


State 79

   32 ParamListEnd: ',' Param ParamListEnd .

    $default  reduce using rule 32 (ParamListEnd)


State 80

   60 ExprListEnd: ',' Expr . ExprListEnd

    ','  shift, and go to state 63

    $default  reduce using rule 59 (ExprListEnd)

    ExprListEnd  go to state 88


State 81

   48 Flow: TK_PR_IF '(' . Expr ')' TK_PR_THEN Command Else

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 89


State 82

   49 Flow: TK_PR_WHILE '(' . Expr ')' Block

    TK_LIT_INT        shift, and go to state 24
    TK_LIT_FLOAT      shift, and go to state 25
    TK_LIT_FALSE      shift, and go to state 26
    TK_LIT_TRUE       shift, and go to state 27
    TK_LIT_CHAR       shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 11

    Lit       go to state 30
    LitList   go to state 31
    FuncCall  go to state 32
    ID        go to state 33
    Expr      go to state 90


State 83

   52 Ret: TK_PR_RETURN Expr .

    $default  reduce using rule 52 (Ret)


State 84

   34 Block: '{' CommandList '}' .

    $default  reduce using rule 34 (Block)


State 85

   37 CommandListEnd: ';' . Command CommandListEnd

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 67
    TK_PR_WHILE       shift, and go to state 68
    TK_PR_RETURN      shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 11
    '{'               shift, and go to state 59

    $default  reduce using rule 38 (Command)

    Dec       go to state 70
    Type      go to state 8
    Block     go to state 71
    Command   go to state 91
    Atrib     go to state 74
    Flow      go to state 75
    Ret       go to state 76
    FuncCall  go to state 77
    ID        go to state 78


State 86

   35 CommandList: Command CommandListEnd .

    $default  reduce using rule 35 (CommandList)


State 87

   47 Atrib: ID Array . TK_OC_EQ Expr

    TK_OC_EQ  shift, and go to state 42


State 88

   60 ExprListEnd: ',' Expr ExprListEnd .

    $default  reduce using rule 60 (ExprListEnd)


State 89

   48 Flow: TK_PR_IF '(' Expr . ')' TK_PR_THEN Command Else

    ')'  shift, and go to state 92


State 90

   49 Flow: TK_PR_WHILE '(' Expr . ')' Block

    ')'  shift, and go to state 93


State 91

   37 CommandListEnd: ';' Command . CommandListEnd

    ';'  shift, and go to state 85

    $default  reduce using rule 36 (CommandListEnd)

    CommandListEnd  go to state 94


State 92

   48 Flow: TK_PR_IF '(' Expr ')' . TK_PR_THEN Command Else

    TK_PR_THEN  shift, and go to state 95


State 93

   49 Flow: TK_PR_WHILE '(' Expr ')' . Block

    '{'  shift, and go to state 59

    Block  go to state 96


State 94

   37 CommandListEnd: ';' Command CommandListEnd .

    $default  reduce using rule 37 (CommandListEnd)


State 95

   48 Flow: TK_PR_IF '(' Expr ')' TK_PR_THEN . Command Else

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 67
    TK_PR_WHILE       shift, and go to state 68
    TK_PR_RETURN      shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 11
    '{'               shift, and go to state 59

    $default  reduce using rule 38 (Command)

    Dec       go to state 70
    Type      go to state 8
    Block     go to state 71
    Command   go to state 97
    Atrib     go to state 74
    Flow      go to state 75
    Ret       go to state 76
    FuncCall  go to state 77
    ID        go to state 78


State 96

   49 Flow: TK_PR_WHILE '(' Expr ')' Block .

    $default  reduce using rule 49 (Flow)


State 97

   48 Flow: TK_PR_IF '(' Expr ')' TK_PR_THEN Command . Else

    TK_PR_ELSE  shift, and go to state 98

    TK_PR_ELSE  [reduce using rule 50 (Else)]
    $default    reduce using rule 50 (Else)

    Else  go to state 99


State 98

   51 Else: TK_PR_ELSE . Command

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 67
    TK_PR_WHILE       shift, and go to state 68
    TK_PR_RETURN      shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 11
    '{'               shift, and go to state 59

    $default  reduce using rule 38 (Command)

    Dec       go to state 70
    Type      go to state 8
    Block     go to state 71
    Command   go to state 100
    Atrib     go to state 74
    Flow      go to state 75
    Ret       go to state 76
    FuncCall  go to state 77
    ID        go to state 78


State 99

   48 Flow: TK_PR_IF '(' Expr ')' TK_PR_THEN Command Else .

    $default  reduce using rule 48 (Flow)


State 100

   51 Else: TK_PR_ELSE Command .

    $default  reduce using rule 51 (Else)
